// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > accessRequest > getAccessRequests > 200 > ok 1`] = `
{
  "accessRequests": {
    "_id": "664e1aa8bda1f88c28e1c0ce",
    "deleted": false,
    "deletedAt": "",
    "deletedBy": "",
    "id": "test-access-request-13623",
    "modelId": "test-model-4342",
  },
}
`;

exports[`routes > accessRequest > getAccessRequests > audit > expected call 1`] = `
{
  "_id": "664e1aa8bda1f88c28e1c0ce",
  "deleted": false,
  "deletedAt": "",
  "deletedBy": "",
  "id": "test-access-request-13623",
  "modelId": "test-model-4342",
}
`;
